# Make_Schedule

./: LICENSE  README.md
Algorithm/: CMakeLists.txt
Algorithm/db/: TODO  credits (3).csv  credits.csv  credits_python.csv  final_schedule.csv  teachers_timeslot.csv  teachers_timeslots_python.csv
Algorithm/include/: Course.h  Schedule.h
Algorithm/src/: Course.cpp  Schedule.cpp  Teacher.cpp  TimeSlot.cpp  main.cpp
GUI_Schedule/: main.py  make_pdf.py  teachers_timeslots.csv
db/: .~lock.credits.csv#  .~lock.teachers_timeslot.csv#  credits.csv  teachers_timeslot.csv
include/: Course.h  Priority.h  Schedule.h  Teacher.h  TimeSlot.h
src/: Course.cpp  Schedule.cpp  Teacher.cpp  TimeSlot.cpp  main.cpp
